fix: remove scrollbar

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -59,9 +59,10 @@
   -ms-overflow-style: none;
 }
 
-.webkit-w::-webkit-scrollbar {
+.homepg-weatherfc ul::-webkit-scrollbar {
   display: none;
 }
+
 
 .homepg-heroforecast {
   display: flex;
